fix signup endpoint

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,12 @@
-JWT_SECRET=your_jwt_secret_key_here
+# JWT ключи
+JWT_SECRET=feldcmjqeureoiwekrkpmksv
+
+# Настройки базы данных
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=1111
+DB_NAME=linhua_link
+
+# Порт для сервера
+PORT=8080
